--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,5 @@
 
-body{
-font-family: 'Roboto', sans-serif;
-background-color: #FFFFFF;
-color: #434455;
-}
+
 :root{
 --okean: #404bbf;
 --Iris: #4D5AE5;
@@ -15,6 +11,13 @@ color: #434455;
 --success: #31D0AA; 
 --LIGHTSLATE: #8e8f99;
 }
+
+.body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #FFFFFF;
+    color: #434455;
+    }
+
 .list{
     list-style: none;
     font-style: normal;
@@ -344,8 +347,6 @@ margin-bottom: 72px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc; 
     border-top: none; 
-
-
 }
 .list-list{
     text-decoration: none;
@@ -457,7 +458,8 @@ padding-top: 96px;
     border-radius: 4px;
     background: #fcfcfc; 
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2)
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
 }
 .modal-close{
 position: absolute;
@@ -505,7 +507,7 @@ background-color: var(--okean);
     color: white;
 }
 .menu-item-site.current::after{
-    content: " " ;
+    content: '' ;
     display: block;
     width: 48px;
     height: 4px;
@@ -606,9 +608,9 @@ margin-bottom: 16px;
 }
 .foot-main{
     display: flex;
-    lign-items: baseline;
+    align-items: baseline;
 }
-.foot{
+.foot {
     margin-right: 120px;
 
 }
