--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,6 @@
     display: inline-block; 
     margin-bottom: 16px; 
 }
-
 .logo {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -116,6 +115,7 @@
 .foot{
     display: inline-block; 
     margin-bottom: 16px;
+    margin-right: 120px;
 }
 .menu-item-site{
     font-size: 16px;
@@ -501,10 +501,22 @@ background-color: var(--okean);
 }
 .overlay{
     overflow: hidden;
+    position: relative;
+
 }
-.overlay text{
+.overlay-text{
     top: 0;
-    color: white;
+    position: absolute;
+    font-size: 16px;
+    line-height: 1.5; 
+    letter-spacing: 0.02em; 
+    color: var(--CLOUD);
+    padding: 40px 32px; 
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-item-site.current::after{
     content: '' ;
@@ -626,6 +638,7 @@ margin-bottom: 16px;
 .foot-soc-item{
     width: 40px;
    height: 40px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 .foot-social-link{
     width: 100%;
