--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,10 @@
 .link{
     text-decoration: none;
 }
-.main-section{
+.mains-section{
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpeg); 
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/img-name.jpg); 
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover; 
@@ -338,12 +338,6 @@ margin-bottom: 72px;
 }
 
 .list-text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
     padding: 32px 16px;
     border: 1px solid #e7e9fc; 
     border-top: none; 
@@ -441,7 +435,7 @@ padding-top: 96px;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 100;
 }
-.is-hidden{
+.backdrop.dden{
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
@@ -494,15 +488,18 @@ background-color: var(--okean);
     fill: WHITE;
 }
 
-.over-link{
+.last-unit{
     display: block;
-    transform: translate Y (100%);
     color: inherit;
 }
+.list-list:hover .overlay-text,
+.list-list:focus .overlay-text{
+    transform: translateY(0%);
+}
+
 .overlay{
     overflow: hidden;
     position: relative;
-
 }
 .overlay-text{
     top: 0;
