--- a/css/styles.css
+++ b/css/styles.css
@@ -448,10 +448,10 @@ padding-top: 96px;
     min-height: 584px;
     top: 50%;
     left: 50%;
-    transform: translate(-50% -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
     flex-shrink: 0;
     border-radius: 4px;
-    background: #fcfcfc; 
+    background-color: #fcfcfc; 
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
@@ -474,19 +474,18 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.modal-close:hover{
+.modal-close:hover,
+.modal-close:focus{
     border: none;
     background-color: var(--okean);
 }
-.modal-close:focus{
-background-color: var(--okean);
-}
+
 .modal-close-icon{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-icon:hover,
 .modal-close-icon:focus {
-    fill: WHITE;
+    fill:  #ffffff;
 }
 
 .last-unit{
@@ -590,13 +589,13 @@ background-color: #404bbf;
 .cust-posulania{
 width: 100%;
 height: 100%;
-border: 1px solid #8e8f99;
 border-radius:4px;
 display: flex;
 align-items: center; 
 justify-content: center;
 color: var(--LIGHTSLATE);
 border: 1px solid #8e8f99;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cust-posulania:hover,
