--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ box-shadow:0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 
     color:#404BBF;
 }
 .first{
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .second{
     position: relative;
@@ -483,8 +483,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .modal-close-icon{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-icon:hover,
-.modal-close-icon:focus {
+.modal-close:hover,
+.modal-close:focus {
     fill:  #ffffff;
 }
 
@@ -622,7 +622,7 @@ margin-bottom: 16px;
     align-items: baseline;
 }
 .foot {
-    margin-right: 120px 
+    margin-right: 120px;
 }
 .footer-social{
     display: flex;
